<resources>
    <string name="app_name">Safe Drive(PRO)</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="mobile_number">Mobile number</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="favourite">Favourite</string>
    <string name="on_drive">ON DRIVE</string>
    <string name="send_sms">Send SMS</string>
    <string name="update">Update</string>
    <string name="view_location">View Location</string>
    <string name="delete">Delete</string>
    <string name="remove_from_favourite">Remove from Favourite</string>
    <string name="add_favourite">Add Favourite</string>
    <string name="delete_favourite">Delete Favourite</string>
    <string name="view_favourite">View Favourite</string>
    <string name="quit">Quit</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="about_your_health">About your health</string>
    <string name="blood_group">Blood Group</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="emergency_contact_1">Emergency Contact 1</string>
    <string name="emergency_contact_2">Emergency Contact 2</string>
    <string name="emergency_contact_3">Emergency Contact 3</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="registration">Registration</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="driving_licence_number">Driving Licence Number</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact">Contact</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
</resources>