<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/reg"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        tools:context=".GetContact">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/update"
            android:id="@+id/text"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/gender" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:ems="10"
            android:id="@+id/fname"
            android:layout_below="@+id/text"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:ems="10"
            android:id="@+id/lname"
            android:layout_below="@+id/fname"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:focusable="false"
            android:hint="@string/date_of_birth"
            android:ems="10"
            android:id="@+id/dob"
            android:layout_below="@+id/lname"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/gender"
            android:id="@+id/gender"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dob"
            android:textSize="22sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_below="@+id/dob"
            android:layout_toEndOf="@+id/gender">

            <RadioButton
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/male"
                android:layout_gravity="top"
                android:layout_weight="0.56"
                android:checked="false" />

            <RadioButton
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/female"
                android:layout_weight="1"
                android:checked="false" />
        </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="number"
            android:hint="@string/mobile_number"
            android:ems="10"
            android:id="@+id/mobno"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobno"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="number"
            android:id="@+id/adrno"
            android:hint="@string/aadhaar_number"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
            android:hint="@string/driving_licence_number"
            android:id="@+id/licno"
            android:layout_below="@+id/adrno"
            android:layout_alignEnd="@+id/radioGroup"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/curved_edge_button"
            android:text="@string/submit"
            android:onClick="addData"
            android:id="@+id/sbmt"
            android:layout_below="@+id/licno"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>