<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/favourite"
        android:id="@+id/text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/delete_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/curved_edge_button"
        android:id="@+id/delFav"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/addFav"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/view_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/curved_edge_button"
        android:id="@+id/viewFav"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/delFav"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/add_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/curved_edge_button"
        android:id="@+id/addFav"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>