<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sathish.SafeDrive_pro.CustomerMainActivity"
    android:background="@android:color/black">

    <Button
        android:text="@string/on_drive"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:id="@+id/Start"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:text="@string/update"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/Update"
        android:onClick="update"
        android:background="@drawable/chalkers_badge"
        android:layout_below="@+id/Start"
        android:layout_alignStart="@id/Start"
        android:layout_marginStart="-2dp"
        android:layout_alignEnd="@id/Start"
        android:layout_marginEnd="110dp"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:text="@string/favourite"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:id="@+id/Favorite"
        android:onClick="favorite"
        android:background="@drawable/chalkers_badge"
        android:layout_below="@+id/Start"
        android:layout_alignEnd="@id/Start"
        android:layout_marginStart="110dp"
        android:layout_alignStart="@id/Start"
        android:layout_marginEnd="-2dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:text="@string/view_location"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:id="@+id/VwLoc"
        android:onClick="viewLocation"
        android:background="@drawable/chalkers_badge"
        android:layout_below="@+id/Update"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"/>

</RelativeLayout>
